添加同步方法